<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_text">"Enter text here"</string>
    <string name="btnText">"Search"</string>
    <string name="tvColor">"Color Filter"</string>
    <string name="tvSize">"Image Size"</string>
    <string name="tvSite">"Site Filter"</string>
    <string name="tvType">"Image Type"</string>
    <string name="btnSave">"Save"</string>
    <string name="spColorPrompt">"Choose Image Color"</string>
    <string name="spSizePrompt">"Choose Image Size"</string>
    <string name="spTypePrompt">"Choose Image Type"</string>

    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>
